copied some files from unofficial and good loss drop

--- a/tset.ipynb
+++ b/tset.ipynb
@@ -136,6 +136,27 @@
     "print(a)\n",
     "print(sum(a))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(384, 512, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "\n",
+    "img = np.array(Image.open(\"./data/basketball/frame/0000.png\"))\n",
+    "print(img.shape)\n"
+   ]
   }
  ],
  "metadata": {
